base/gateway-api/apps_v1__deployment__gateway-system__gateway-api-admission-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api-admission-server
  namespace: gateway-system
  labels:
    name: gateway-api-admission-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gateway-api-admission-server
  template:
    metadata:
      name: gateway-api-admission-server
      labels:
        name: gateway-api-admission-server
    spec:
      containers:
      - name: webhook
        image: registry.k8s.io/gateway-api/admission-server:v0.7.1
        imagePullPolicy: Always
        args:
        - -logtostderr
        - --tlsCertFile=/etc/certs/cert
        - --tlsKeyFile=/etc/certs/key
        - -v=10
        - 2>&1
        ports:
        - containerPort: 8443
          name: webhook
        resources:
          limits:
            memory: 50Mi
            cpu: 100m
          requests:
            memory: 50Mi
            cpu: 100m
        volumeMounts:
        - name: webhook-certs
          mountPath: /etc/certs
          readOnly: true
        securityContext:
          readOnlyRootFilesystem: true
      volumes:
      - name: webhook-certs
        secret:
          secretName: gateway-api-admission
