base/gateway-api/v1__service__gateway-system__gateway-api-admission-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: gateway-api-webhook-server
  name: gateway-api-admission-server
  namespace: gateway-system
spec:
  type: ClusterIP
  ports:
  - name: https-webhook
    port: 443
    targetPort: 8443
  selector:
    name: gateway-api-admission-server
