base/gateway-api/admissionregistration_k8s_io_v1__validatingwebhookconfiguration____gateway-api-admission.yaml
#
# config/webhook/admission_webhook.yaml
#
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gateway-api-admission
webhooks:
- name: validate.gateway.networking.k8s.io
  matchPolicy: Equivalent
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["gateway.networking.k8s.io"]
    apiVersions: ["v1alpha2", "v1beta1"]
    resources: ["gateways", "gatewayclasses", "httproutes"]
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gateway-api-admission-server
      namespace: gateway-system
      path: "/validate"
